k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ygomgr-ingress
  namespace: ygomgr
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ygomgr.home.lab
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
